[package]
name = "ddsend"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "2.0.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
anyhow = "1.0"
futures = "0.3.30"
no-panic = "0.1"
hyper = { version = "1", features = ["full"] }
smol-hyper = "0.1.1"
http-body-util = "0.1"
clap = { version = "4.5", features = ["derive"] }
